Fixed alignments and font-size

--- a/frontend/src/components/inventory/style.scss
+++ b/frontend/src/components/inventory/style.scss
@@ -32,6 +32,11 @@
     }
   }
 
+  .rTableHeader{
+    font-weight: bold;
+    text-align: center;
+  }
+
   .list-container {
     h4 {
       color: $OBBlue;
