--- a/frontend/src/components/shipments/table/style.scss
+++ b/frontend/src/components/shipments/table/style.scss
@@ -38,6 +38,9 @@
 
       .combine-data{
         color: black;
+        text-align: center;
+        align-items: center;
+        font-weight: bold;
       }
    
     }
@@ -55,6 +58,8 @@
       align-self: center;
       font-size: 12px;
       color: #707070;
+      font-weight: bold;
+      text-align: center;
     }
 
     .rTableCell {
@@ -67,6 +72,7 @@
     }
 
     .combine-data {
+      text-align: center;
       display: flex;
       align-items: center;
       font-weight: bold;
